--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -45,6 +45,12 @@ console.log(pRoduct(5,5,5))
 function sUbtract(a,b){return b-a;}
 console.log(sUbtract(3,10))
 
+//METHOD 2 (ARROW FUNCTIONS)
+// const addNumbers(a,b)=>{return a+b}
+// if you dont want to name the function but want the workings of the function.
+
+const subtractNumbers=(w,t)=>{return w-t}
+console. log(subtractNumbers(12,4))
 
 
 
