external java for divide

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./DIVIDE.JS"></script>
 </head>
 
 <body>
@@ -22,6 +23,10 @@
 
 
     <script>
+        //External Js
+console.log(divideNumbers(360,6));
+
+//Internal JS
         // ARRAYS
          const week = ['Mon', 'Tue', 'Wed', 'Thur', 'Fri'];
          console.log(week[0]);
