MULTI LINE COMMENT

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -57,14 +57,14 @@ console.log(sUbtract(3,10))
 const subtractNumbers=(w,t)=>{return w-t}
 console. log(subtractNumbers(12,4))
 
-//CREATING AN OBJECT
-//const car={
-//    'name':'subaru',
-//'colour':'black',
-//'model':'500tx',
-//'age':'5'
-//};
-
+/*CREATING AN OBJECT
+const car={
+    'name':'subaru',
+'colour':'black',
+'model':'500tx',
+'age':'5'
+};
+*/
 
 //CLASSES
 // A template for an object
